# doo-koo-thong

./: .gitignore  README.md  df_cleaned.csv  eda.ipynb  low_jiaxin_task1.ipynb
egt309/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
egt309/conf/base/: catalog.yml  parameters.yml  parameters_reporting.yml
egt309/data/01_raw/: bmarket.csv
egt309/data/03_primary/: df_cleaned.csv
egt309/data/04_feature/: X_test.csv  X_train.csv  df_prep.csv  processed_features.json
egt309/data/05_model_input/: X_test_processed.csv
egt309/data/06_models/: preprocessor.pkl
egt309/data/07_reporting/: model_evaluation_metrics.csv
egt309/data/08_reporting/: model_evaluation_metrics.csv
egt309/notebooks/: df_cleaned.csv  eda.ipynb
egt309/src/egt309/: __init__.py  __main__.py  pipeline_registry.py  settings.py
egt309/src/egt309/pipelines/data_prep/: __init__.py  nodes.py  pipeline.py
egt309/src/egt309/pipelines/data_processing/: nodes.py  pipeline.py
egt309/src/egt309/pipelines/data_science/: nodes.py  pipeline.py
egt309/src/egt309/pipelines/reporting/: __init__.py  nodes.py  pipeline.py
egt309/tests/pipelines/reporting/: test_pipeline.py
src/: model.py
